[gd_scene load_steps=5 format=3 uid="uid://dy2nsbd7j51u1"]

[ext_resource type="Script" path="res://scripts/spreadsheet.gd" id="1_kwcyb"]
[ext_resource type="PackedScene" uid="uid://6nn5nea1bkbq" path="res://scenes/platform/objects/platform_tile_map.tscn" id="2_7sta8"]
[ext_resource type="Theme" uid="uid://cmnphk4dtgj2x" path="res://resources/font_theme.tres" id="3_ipdo3"]
[ext_resource type="PackedScene" uid="uid://b4n35b3ox7vgx" path="res://scenes/platform/objects/label_generator.tscn" id="4_5tbw5"]

[node name="Spreadsheet" type="Node2D"]
script = ExtResource("1_kwcyb")

[node name="PlatformTileMap" parent="." instance=ExtResource("2_7sta8")]
layer_1/tile_data = PackedInt32Array(65536, 393216, 3, 65537, 393216, 3, 65538, 393216, 3, 65539, 393216, 3, 65540, 393216, 3, 65541, 393216, 3, 65542, 393216, 3, 65543, 393216, 3, 65544, 393216, 3, 65545, 393216, 3, 65546, 393216, 3, 65547, 393216, 3, 65548, 393216, 3, 65549, 393216, 3, 65550, 393216, 3, 65551, 393216, 3, 65552, 393216, 3, 65553, 393216, 3, 65554, 393216, 3, 65555, 393216, 3, 65556, 393216, 3, 65557, 393216, 3, 65558, 393216, 3, 65559, 393216, 3, 0, 458752, 4, 1, 458752, 4, 2, 458752, 4, 3, 458752, 4, 4, 458752, 4, 5, 458752, 4, 6, 458752, 4, 7, 458752, 4, 8, 458752, 4, 9, 458752, 4, 10, 458752, 4, 11, 458752, 4, 12, 458752, 4, 13, 458752, 4, 14, 458752, 4, 15, 458752, 4, 16, 458752, 4, 17, 458752, 4, 18, 458752, 4, 19, 458752, 4, 20, 458752, 4, 21, 458752, 4, 22, 458752, 4, 23, 458752, 4, 131075, 327680, 3, 131076, 327680, 3, 131077, 327680, 3, 131078, 327680, 3, 131079, 327680, 3, 131080, 327680, 3, 131081, 327680, 3, 131082, 327680, 3, 131083, 327680, 3, 131084, 327680, 3, 131085, 327680, 3, 131086, 327680, 3, 131087, 327680, 3, 131088, 327680, 3, 131089, 327680, 3, 131090, 327680, 3, 131091, 327680, 3, 131092, 327680, 3, 131093, 327680, 3, 131094, 327680, 3, 131095, 327680, 3, 196608, 327680, 3, 262144, 327680, 3, 327680, 327680, 3, 393216, 327680, 3, 458752, 327680, 3, 196609, 327680, 3, 262145, 327680, 3, 327681, 327680, 3, 393217, 327680, 3, 458753, 327680, 3, 196610, 327680, 3, 262146, 327680, 3, 327682, 327680, 3, 393218, 327680, 3, 458754, 327680, 3, 131072, 262144, 3, 131073, 262144, 3, 131074, 262144, 3, 196611, 458752, 3, 262147, 458752, 3, 327683, 458752, 3, 393219, 458752, 3, 458755, 458752, 3, 196612, 458752, 3, 262148, 458752, 3, 327684, 458752, 3, 393220, 458752, 3, 458756, 458752, 3, 196613, 458752, 3, 262149, 458752, 3, 327685, 458752, 3, 393221, 458752, 3, 458757, 458752, 3, 196614, 458752, 3, 262150, 458752, 3, 327686, 458752, 3, 393222, 458752, 3, 458758, 458752, 3, 196615, 458752, 3, 262151, 458752, 3, 327687, 458752, 3, 393223, 458752, 3, 458759, 458752, 3, 196616, 458752, 3, 262152, 458752, 3, 327688, 458752, 3, 393224, 458752, 3, 458760, 458752, 3, 196617, 458752, 3, 262153, 458752, 3, 327689, 458752, 3, 393225, 458752, 3, 458761, 458752, 3, 196618, 458752, 3, 262154, 458752, 3, 327690, 458752, 3, 393226, 458752, 3, 458762, 458752, 3, 196619, 458752, 3, 262155, 458752, 3, 327691, 458752, 3, 393227, 458752, 3, 458763, 458752, 3, 196620, 458752, 3, 262156, 458752, 3, 327692, 458752, 3, 393228, 458752, 3, 458764, 458752, 3, 196621, 458752, 3, 262157, 458752, 3, 327693, 458752, 3, 393229, 458752, 3, 458765, 458752, 3, 196622, 458752, 3, 262158, 458752, 3, 327694, 458752, 3, 393230, 458752, 3, 458766, 458752, 3, 196623, 458752, 3, 262159, 458752, 3, 327695, 458752, 3, 393231, 458752, 3, 458767, 458752, 3, 196624, 458752, 3, 262160, 458752, 3, 327696, 458752, 3, 393232, 458752, 3, 458768, 458752, 3, 196625, 458752, 3, 262161, 458752, 3, 327697, 458752, 3, 393233, 458752, 3, 458769, 458752, 3, 196626, 458752, 3, 262162, 458752, 3, 327698, 458752, 3, 393234, 458752, 3, 458770, 458752, 3, 196627, 458752, 3, 262163, 458752, 3, 327699, 458752, 3, 393235, 458752, 3, 458771, 458752, 3, 196628, 458752, 3, 262164, 458752, 3, 327700, 458752, 3, 393236, 458752, 3, 458772, 458752, 3, 196629, 458752, 3, 262165, 458752, 3, 327701, 458752, 3, 393237, 458752, 3, 458773, 458752, 3, 196630, 458752, 3, 262166, 458752, 3, 327702, 458752, 3, 393238, 458752, 3, 458774, 458752, 3, 196631, 458752, 3, 262167, 458752, 3, 327703, 458752, 3, 393239, 458752, 3, 458775, 458752, 3)
layer_2/tile_data = PackedInt32Array(65536, 65536, 4, 65537, 65536, 4, 65538, 131072, 4, 65539, 65536, 4, 65540, 65536, 4, 65541, 65536, 4, 65542, 65536, 4, 65543, 65536, 4, 65544, 65536, 4, 65545, 65536, 4, 65546, 65536, 4, 65547, 65536, 4, 65548, 65536, 4, 65549, 65536, 4, 65550, 65536, 4, 65551, 65536, 4, 65552, 65536, 4, 65553, 65536, 4, 65554, 65536, 4, 65555, 65536, 4, 65556, 65536, 4, 65557, 65536, 4, 65558, 65536, 4, 131072, 0, 3, 131073, 65536, 3, 131074, 131072, 3, 196608, 0, 3, 196609, 65536, 3, 196610, 131072, 3, 262144, 0, 3, 262145, 65536, 3, 262146, 131072, 3, 327680, 0, 3, 327681, 65536, 3, 327682, 131072, 3, 393216, 0, 3, 393217, 65536, 3, 393218, 131072, 3, 458752, 0, 3, 458753, 65536, 3, 458754, 131072, 3, 131075, 0, 3, 131076, 65536, 3, 131077, 131072, 3, 196611, 0, 3, 196612, 65536, 3, 196613, 131072, 3, 262147, 0, 3, 262148, 65536, 3, 262149, 131072, 3, 327683, 0, 3, 327684, 65536, 3, 327685, 131072, 3, 393219, 0, 3, 393220, 65536, 3, 393221, 131072, 3, 458755, 0, 3, 458756, 65536, 3, 458757, 131072, 3, 131078, 0, 3, 131079, 65536, 3, 131080, 131072, 3, 196614, 0, 3, 196615, 65536, 3, 196616, 131072, 3, 262150, 0, 3, 262151, 65536, 3, 262152, 131072, 3, 327686, 0, 3, 327687, 65536, 3, 327688, 131072, 3, 393222, 0, 3, 393223, 65536, 3, 393224, 131072, 3, 458758, 0, 3, 458759, 65536, 3, 458760, 131072, 3, 131081, 0, 3, 131082, 65536, 3, 131083, 131072, 3, 196617, 0, 3, 196618, 65536, 3, 196619, 131072, 3, 262153, 0, 3, 262154, 65536, 3, 262155, 131072, 3, 327689, 0, 3, 327690, 65536, 3, 327691, 131072, 3, 393225, 0, 3, 393226, 65536, 3, 393227, 131072, 3, 458761, 0, 3, 458762, 65536, 3, 458763, 131072, 3, 131084, 0, 3, 131085, 65536, 3, 131086, 131072, 3, 196620, 0, 3, 196621, 65536, 3, 196622, 131072, 3, 262156, 0, 3, 262157, 65536, 3, 262158, 131072, 3, 327692, 0, 3, 327693, 65536, 3, 327694, 131072, 3, 393228, 0, 3, 393229, 65536, 3, 393230, 131072, 3, 458764, 0, 3, 458765, 65536, 3, 458766, 131072, 3, 131087, 0, 3, 131088, 65536, 3, 131089, 131072, 3, 196623, 0, 3, 196624, 65536, 3, 196625, 131072, 3, 262159, 0, 3, 262160, 65536, 3, 262161, 131072, 3, 327695, 0, 3, 327696, 65536, 3, 327697, 131072, 3, 393231, 0, 3, 393232, 65536, 3, 393233, 131072, 3, 458767, 0, 3, 458768, 65536, 3, 458769, 131072, 3, 131090, 0, 3, 131091, 65536, 3, 131092, 131072, 3, 196626, 0, 3, 196627, 65536, 3, 196628, 131072, 3, 262162, 0, 3, 262163, 65536, 3, 262164, 131072, 3, 327698, 0, 3, 327699, 65536, 3, 327700, 131072, 3, 393234, 0, 3, 393235, 65536, 3, 393236, 131072, 3, 458770, 0, 3, 458771, 65536, 3, 458772, 131072, 3, 131093, 0, 3, 131094, 65536, 3, 131095, 131072, 3, 196629, 0, 3, 196630, 65536, 3, 196631, 131072, 3, 262165, 0, 3, 262166, 65536, 3, 262167, 131072, 3, 327701, 0, 3, 327702, 65536, 3, 327703, 131072, 3, 393237, 0, 3, 393238, 65536, 3, 393239, 131072, 3, 458773, 0, 3, 458774, 65536, 3, 458775, 131072, 3)

[node name="Headers" type="Node2D" parent="."]

[node name="FileLabel" type="Label" parent="Headers"]
offset_right = 48.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "File"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditLabel" type="Label" parent="Headers"]
offset_left = 48.0
offset_right = 96.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Edit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ViewLabel" type="Label" parent="Headers"]
offset_left = 96.0
offset_right = 144.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "View"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsertLabel" type="Label" parent="Headers"]
offset_left = 144.0
offset_right = 192.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Insert"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DataLabel" type="Label" parent="Headers"]
offset_left = 192.0
offset_right = 240.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Data"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LayoutLabel" type="Label" parent="Headers"]
offset_left = 240.0
offset_right = 288.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Layout"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReviewLabel" type="Label" parent="Headers"]
offset_left = 288.0
offset_right = 336.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Review"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpLabel" type="Label" parent="Headers"]
offset_left = 336.0
offset_right = 384.0
offset_bottom = 16.0
theme = ExtResource("3_ipdo3")
text = "Help"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CellPositionLabel" type="Label" parent="."]
offset_top = 16.0
offset_right = 48.0
offset_bottom = 32.0
theme = ExtResource("3_ipdo3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "A1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FunctionLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 32.0
theme = ExtResource("3_ipdo3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = " fx=|"
vertical_alignment = 1

[node name="ColumnLabelGenerator" parent="." instance=ExtResource("4_5tbw5")]
offset_left = 64.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 48.0

[node name="RowLabelGenerator" parent="." instance=ExtResource("4_5tbw5")]
offset_left = 16.0
offset_top = 48.0
offset_right = 32.0
offset_bottom = 64.0
text = "1"
x_offset = 0
y_offset = 16
